[XUI-1554] Fix banner overflow
I broke this by setting `display: block` in #4999. Changing the
`display` messed with the overflow, and fixing the overflow messed with
the sentiment borders. I left the border compensation gubbins in the
mixin in case we need it in the future – happy to blow it out if y’all
feel it’s necessary.

I also corrected a var spelling that was bothering me.

--- a/src/sass/1-vars/_colors.scss
+++ b/src/sass/1-vars/_colors.scss
@@ -544,7 +544,7 @@ $xui-tag-negative-color: $xui-color-red-xdark;
 $xui-banner-bg-color: $xui-color-white;
 $xui-banner-color: $xui-color-grey-1;
 $xui-banner-positive-bg-color: $xui-color-green;
-$xui-bannger-negative-bg-color: $xui-color-red;
+$xui-banner-negative-bg-color: $xui-color-red;
 $xui-banner-message-color: $xui-color-grey-alpha-2;
 
 // Toast
